daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: jenkins-daemonset
spec:
  selector:
    matchLabels:
      my-pod: webapp
  template:
    metadata:
      labels:
        my-pod: webapp
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
      tolerations:
        - key: colour
          operator: "Equal"
          value: blue
          effect: NoSchedule
