limit-gur.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-guaranteed
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "200m"
        memory: "156Mi"
      limits:
        cpu: "500m"
        memory: "256Mi"
