tomcat-deployment-conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0
        ports:
        - containerPort: 8080

        volumeMounts:
        - name: tomcat-config-volume
          mountPath: /usr/local/tomcat/conf/tomcat-users.xml
          subPath: tomcat-users.xml

        - name: tomcat-config-volume
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml

      volumes:
      - name: tomcat-config-volume
        configMap:
          name: tomcat-config
