tomcat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat 
  namespace: mani-ns    
spec:
  containers:
  - name: tomcat
    image: tomcat:latest
    ports:
    - containerPort: 8080
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
