tomcat-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-web-app
spec:
  selector:
    name: webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
